objects/ClientCase__c.object
<CustomObject>
    <description>To manage client-case relationships, tracking the services provided by the Agency.</description>
    <fields>
        <fullName>AMIAtEndOfClientCase__c</fullName>
        <label>AMI at End of Client Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 30% AMI of Area Median Income (AMI)</fullName>
                </value>
                <value>
                    <fullName>30% - 49% AMI</fullName>
                </value>
                <value>
                    <fullName>50% - 79% AMI</fullName>
                </value>
                <value>
                    <fullName>80% - 100% AMI</fullName>
                </value>
                <value>
                    <fullName>&gt; 100% AMI</fullName>
                </value>
                <value>
                    <fullName>Chose not to respond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMIAtStartOfClientCase__c</fullName>
        <label>AMI at Start of Client Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below 30% of AMI</fullName>
                </value>
                <value>
                    <fullName>30% - 49% AMI</fullName>
                </value>
                <value>
                    <fullName>50% - 79% AMI</fullName>
                </value>
                <value>
                    <fullName>80% - 100% AMI</fullName>
                </value>
                <value>
                    <fullName>101% - 120% AMI</fullName>
                </value>
                <value>
                    <fullName>Above 120% of AMI</fullName>
                </value>
                <value>
                    <fullName>Chose not to respond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acquiredasaresultofforeclosure__c</fullName>
        <label>Acquired as a result of foreclosure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Plan_Created_Date__c</fullName>
        <label>Action Plan Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActiveMilitary__c</fullName>
        <description>HUD-Defined Activity Military?</description>
        <label>Active Military</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ActiveMilitary</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AddressMailingStreet__c</fullName>
        <formula>LEFT(
Address__Street__s,FIND(
IF(
FIND(&apos;/&apos;, Address__Street__s )&gt;0 &amp;&amp; ISNUMBER( MID(Address__Street__s ,FIND(&apos;/&apos;,Address__Street__s )+1,1) ) ,
MID( Address__Street__s , FIND( &apos;/&apos;,Address__Street__s )-1, 3) ,
&apos; &apos;
),
Address__Street__s
) + VALUE(
IF( FIND(&apos;/&apos;,Address__Street__s )&gt;0 &amp;&amp; ISNUMBER( MID(Address__Street__s ,FIND(&apos;/&apos;,Address__Street__s )+1,1) ),
&apos;3&apos;,
&apos;0&apos;
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>AgeCheck__c</fullName>
        <formula>IF(Age__c &lt; 18 || Age__c &gt;= 110,
&quot;Age must be greater than or equal to 18, but less than 110.&quot;,
IF(Age__c &lt; 62 &amp;&amp; RecordType.Name == &apos;Existing Home Owner&apos; &amp;&amp; TEXT(ServicesProvidedToExistingHomeOwner__c) == &apos;Reverse mortgage&apos;,
&quot;If Service Provided to an Existing Homeowner = Reverse Mortgage, then age must be at least 62.&quot;,
&quot;Passed&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualHouseholdIncome__c</fullName>
        <formula>HouseholdMonthlyIncome1__c * 12</formula>
        <label>Annual Household Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AreaMedianIncome__c</fullName>
        <label>Area Median Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Below 30% of AMI</fullName>
                </value>
                <value>
                    <fullName>30 - 49% of AMI</fullName>
                </value>
                <value>
                    <fullName>50 - 79% of AMI</fullName>
                </value>
                <value>
                    <fullName>80 - 100% of AMI</fullName>
                </value>
                <value>
                    <fullName>101% - 120% of AMI</fullName>
                </value>
                <value>
                    <fullName>Above 120% of AMI</fullName>
                </value>
                <value>
                    <fullName>Chose not to respond</fullName>
                </value>
                <value>
                    <fullName>Above 100% AMI</fullName>
                    <isActive>false</isActive>
                    <label>Above 100% AMI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label>Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Builtoffsitefactorybuilt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Built off site (factory built)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Builtofsitefactorybuilt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Built of site (factory built)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BuyersAgentSalesConcessions__c</fullName>
        <label>Buyer&apos;s Agent Sales Concessions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CaseResolutionDate__c</fullName>
        <label>Case Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CaseResolution__c</fullName>
        <label>Case Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fulfilled (Purchased housing)</fullName>
                </value>
                <value>
                    <fullName>Suspended (Withdrew from counseling)</fullName>
                </value>
                <value>
                    <fullName>Entered Lease Purchase Pgm</fullName>
                </value>
                <value>
                    <fullName>Decided Not to Purchase</fullName>
                </value>
                <value>
                    <fullName>Counseled on HECM; Declined Mortgage</fullName>
                </value>
                <value>
                    <fullName>Referred to Other Agency</fullName>
                </value>
                <value>
                    <fullName>Obtained a HECM</fullName>
                </value>
                <value>
                    <fullName>Rcvd. Home Equity/Home Improvement Loan</fullName>
                </value>
                <value>
                    <fullName>Mortgage Refinanced</fullName>
                </value>
                <value>
                    <fullName>Sold House, Chose Alt. Housing Solution</fullName>
                </value>
                <value>
                    <fullName>Rcvd. Consumer Loan (Unsecured)</fullName>
                </value>
                <value>
                    <fullName>Obtained a Non-FHA Reverse Mortgage</fullName>
                </value>
                <value>
                    <fullName>Complete Financial Mgt/Budget Counseling</fullName>
                </value>
                <value>
                    <fullName>Complete Home Maintenance Counseling</fullName>
                </value>
                <value>
                    <fullName>Counseled and Utilities Brought Current</fullName>
                </value>
                <value>
                    <fullName>Counseled/Referred for Legal Assistance</fullName>
                </value>
                <value>
                    <fullName>Brought Mortgage Current</fullName>
                </value>
                <value>
                    <fullName>Initiated Forbearance Agreement</fullName>
                </value>
                <value>
                    <fullName>Executed Deed-in-lieu</fullName>
                </value>
                <value>
                    <fullName>Sold Property</fullName>
                </value>
                <value>
                    <fullName>Mortgage Foreclosed</fullName>
                </value>
                <value>
                    <fullName>Rcvd. 2nd Mortgage</fullName>
                </value>
                <value>
                    <fullName>Partial Claim</fullName>
                </value>
                <value>
                    <fullName>Mortgage Modified</fullName>
                </value>
                <value>
                    <fullName>Counseled/Referred to Agency</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Pre-foreclosure Sale</fullName>
                </value>
                <value>
                    <fullName>Entered Debt Management Plan</fullName>
                </value>
                <value>
                    <fullName>Other (final result not listed above)</fullName>
                </value>
                <value>
                    <fullName>Found Alternative (Found alternative rental housing)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseSubType__c</fullName>
        <label>Case Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NW Rehab</fullName>
                    <default>true</default>
                    <label>NW Rehab</label>
                </value>
                <value>
                    <fullName>NW Refinance Non-Foreclosure</fullName>
                </value>
                <value>
                    <fullName>NW Client Other Based Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseTypeName__c</fullName>
        <formula>CaseType__r.Name</formula>
        <label>Case Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>HUD and NW reportable case types</description>
        <label>Case Type</label>
        <referenceTo>CaseType__c</referenceTo>
        <relationshipLabel>Client Cases</relationshipLabel>
        <relationshipName>Client_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CensusTractLookup__c</fullName>
        <formula>HYPERLINK(&quot;https://geomap.ffiec.gov/ffiecgeomap/&quot;, &quot;Geomap&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Census Tract Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CensusTract__c</fullName>
        <label>Census Tract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChoseNottoProvideIncome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chose Not to Provide Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientCaseClosedDate__c</fullName>
        <description>Date the case is closed</description>
        <label>Client Case Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientCaseName__c</fullName>
        <description>Concatenated of contact Last Name + First Letter of First Name + Date Created + Service Type</description>
        <formula>PrimaryClient__r.LastName + &quot;, &quot;+ IF(ISNULL(PrimaryClient__r.FirstName) ,&apos;&apos;,MID(PrimaryClient__r.FirstName, 0, 1)) + &quot; - &quot;+  text(DATEVALUE(CreatedDate)) +&quot; - &quot;+  CaseType__r.Name</formula>
        <label>Client Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCaseStatus__c</fullName>
        <defaultValue>(&quot;In Progress&quot;)</defaultValue>
        <description>In Progress: Open Case that is in progress and HUD reportable

Closed - Incomplete: Case closed without meeting the original outcome, HUD reportable

Closed - Service Complete: Case closed with meeting the original outcome, HUD reportable

On Hold: Case temporarily paused due to external factors or client request</description>
        <inlineHelpText>[1] In Progress: Case pending

[2] Closed - Incomplete: Didn’t meet original outcome

[3] Closed - Complete: Met the outcome

[4] On Hold: Case temporarily paused</inlineHelpText>
        <label>Client Case Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Closed - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Closed - Complete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>In Process</fullName>
                    <isActive>false</isActive>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <isActive>false</isActive>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientCaseTerm__c</fullName>
        <label>Client Case Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Medium Term</fullName>
                </value>
                <value>
                    <fullName>Short Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientHUDAssistance__c</fullName>
        <label>Client HUD Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rental Voucher</fullName>
                </value>
                <value>
                    <fullName>Place Based Rental Assistance</fullName>
                </value>
                <value>
                    <fullName>Home Ownership Voucher</fullName>
                </value>
                <value>
                    <fullName>Purchase REO Property</fullName>
                </value>
                <value>
                    <fullName>Down Payment Assistance</fullName>
                </value>
                <value>
                    <fullName>Other HUD Program</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientNumber__c</fullName>
        <description>Client Number pulled from Household</description>
        <formula>Household__r.ClientNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientPredatoryLending__c</fullName>
        <label>Client Predatory Lending</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosingCosts__c</fullName>
        <label>Closing Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ColoniasResidence__c</fullName>
        <label>Colonias Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounselSessionDateEnd__c</fullName>
        <label>Counsel Session Date End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CounselSessionDateStart__c</fullName>
        <label>Counsel Session Date Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CounselSessionDuration__c</fullName>
        <label>Counsel Session Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CounselingAndEduHoursByOtherAgency__c</fullName>
        <label>Counseling and Edu Hours By Other Agency</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CounselingFee__c</fullName>
        <label>Counseling Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CounselingSessionTypes__c</fullName>
        <label>Counseling Session Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Face to Face</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Internet</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Group</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounselingTermination__c</fullName>
        <label>Counseling Termination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Dropped Out</fullName>
                </value>
                <value>
                    <fullName>Referred</fullName>
                </value>
                <value>
                    <fullName>No Further Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounsellorName__c</fullName>
        <description>Name of the counselor who is assigned to the case</description>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <label>Assigned Counselor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditScoreDate__c</fullName>
        <label>Credit Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreditScoreGoal__c</fullName>
        <label>Credit Score Goal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditScoreSource__c</fullName>
        <label>Credit Score Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Experian</fullName>
                </value>
                <value>
                    <fullName>Tri-merge</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>TransUnion</fullName>
                </value>
                <value>
                    <fullName>Equifax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditScore__c</fullName>
        <label>Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentMonthlyDebtObligationGoal__c</fullName>
        <label>Current Monthly Debt Obligation Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentResidence__c</fullName>
        <description>Own, Rent, Other</description>
        <inlineHelpText>Residence ownership</inlineHelpText>
        <label>Current Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CurrentResidenceClientCase</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateAMILastCalculated__c</fullName>
        <label>Date AMI Last Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateHBEProvidedByOtherAgency__c</fullName>
        <formula>IF(
ISPICKVAL(HBEProvidedByOtherAgency__c, &quot;Yes&quot;),
TEXT(HBECertDate__c),
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date HBE Provided by Other Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateHBEProvidedCheck__c</fullName>
        <formula>IF(
    AND(
        TEXT(HBEProvidedByOtherAgency__c) = &apos;Yes&apos;,
        HBECertDate__c - IntakeDate__c &lt; -365,
        OR(
            ISPICKVAL(NWORole__c, &apos;NWO Constructs New Unit for New Home Owner&apos;),
            ISPICKVAL(NWORole__c, &apos;NWO Sells a Unit it Had Purchased (with or without rehab) to New Home Owner&apos;),
            ISPICKVAL(NWORole__c, &apos;Directly provides Self-Help Housing for New Home Owner&apos;),
            ISPICKVAL(NWORole__c, &apos;Plays Intermediary role in providing Self-Help Housing for New Home Owner&apos;),
            ISPICKVAL(NWORole__c, &apos;Counselor and/or Broker/Lender ONLY for New Home Owner&apos;)
        )
    ),
&apos;The certificate of completion date is more than 12 months prior to the intake date.&apos;,
&apos;Passed&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date HBE Provided Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisabledStatus__c</fullName>
        <label>Disabled Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscriminationVictim__c</fullName>
        <label>Discrimination Victim</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DiscriminationVictim</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Divorce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Divorce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>HUD-Defined Education</description>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Education</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <description>Client Email Address</description>
        <inlineHelpText>Client Email Address</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmploymentStatus__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full-Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part-Time</fullName>
                </value>
                <value>
                    <fullName>Unemployed AND Looking for Work</fullName>
                </value>
                <value>
                    <fullName>Unable to Work Due to Disability</fullName>
                </value>
                <value>
                    <fullName>Stay-at-Home Caregiver OR Parent</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Employed Full-Time AND Student</fullName>
                </value>
                <value>
                    <fullName>Employed Part-Time AND Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnergyStarHome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EnergyStar Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnglishProficiency__c</fullName>
        <description>HUD-Defined English Proficiency</description>
        <inlineHelpText>English Proficiency of the primary client</inlineHelpText>
        <label>English Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Limited_English_Proficiency_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>HUD-Defined Ethnicity</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EvaluateHUDAMI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EvaluateHUDAMI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FEMAReliefType__c</fullName>
        <label>FEMA Relief Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama Hurricane Michael (DR-4406)</fullName>
                </value>
                <value>
                    <fullName>Alabama Hurricane Michael (EM-3407)</fullName>
                </value>
                <value>
                    <fullName>California Wildfires (DR-4407)</fullName>
                </value>
                <value>
                    <fullName>Florida Hurricane Michael (DR-4399)</fullName>
                </value>
                <value>
                    <fullName>Florida Hurricane Michael (EM-3405)</fullName>
                </value>
                <value>
                    <fullName>Georgia Hurricane Michael (DR-4400)</fullName>
                </value>
                <value>
                    <fullName>Georgia Hurricane Michael (EM-3406)</fullName>
                </value>
                <value>
                    <fullName>Hawaii Tropical Storm Olivia (EM-3404)</fullName>
                </value>
                <value>
                    <fullName>Hurricane Katrina</fullName>
                </value>
                <value>
                    <fullName>Hurricane Rita</fullName>
                </value>
                <value>
                    <fullName>Iowa Severe Storm and Tornadoes (DR-4392)</fullName>
                </value>
                <value>
                    <fullName>Kansas Severe Storms, etc (DR-4403)</fullName>
                </value>
                <value>
                    <fullName>N. Mariana Islands Super Typhoon Yutu (DR-4404)</fullName>
                </value>
                <value>
                    <fullName>North Carolina Hurricane Florence (EM-3401)</fullName>
                </value>
                <value>
                    <fullName>Northern Mariana Islands Typhoon Mangkhut (EM-3402)</fullName>
                </value>
                <value>
                    <fullName>Severe storms and flooding</fullName>
                </value>
                <value>
                    <fullName>South Carolina Hurricane Florence (EM-3400)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Virginia Hurricane Florence (DR-4401)</fullName>
                </value>
                <value>
                    <fullName>Virginia Hurricane Florence (EM-3403)</fullName>
                </value>
                <value>
                    <fullName>Wild Fires</fullName>
                </value>
                <value>
                    <fullName>Wisonsin Severe Storms, Tornadoes, etc (DR-4402)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FarmWorker__c</fullName>
        <label>Farm Worker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>